@@ -31,6 +31,8 @@ import javax.swing.JComboBox;
 import javax.swing.ButtonGroup;
 import javax.swing.DefaultComboBoxModel;
 import javax.swing.SpinnerNumberModel;
+import javax.swing.event.ChangeListener;
+import javax.swing.event.ChangeEvent;
 
 public class RegSolEmpresa extends JDialog {
 
@@ -322,7 +324,19 @@ public class RegSolEmpresa extends JDialog {
 				}
 				{
 					spnAgnosExp = new JSpinner();
-					spnAgnosExp.setModel(new SpinnerNumberModel(new Integer(0), new Integer(0), null, new Integer(1)));
+					spnAgnosExp.addChangeListener(new ChangeListener() {
+						public void stateChanged(ChangeEvent e) {
+							// Actualizar el valor minimo de la edad 
+							SpinnerNumberModel modelEdad = (SpinnerNumberModel)spnEdad.getModel();
+							Integer currentValue = (Integer)modelEdad.getValue();
+							int nuevoValor = Utils.getSpinnerIntValue(spnAgnosExp) + 18;
+							modelEdad.setMinimum(Integer.valueOf(nuevoValor));
+							if(currentValue.intValue() == 18 || currentValue.intValue() <= nuevoValor) {
+								modelEdad.setValue(Integer.valueOf(nuevoValor));
+							}
+						}
+					});
+					spnAgnosExp.setModel(new SpinnerNumberModel(0, 0, 100, 1));
 					spnAgnosExp.setBounds(200, 261, 154, 20);
 					pnRequisitos.add(spnAgnosExp);
 				}
@@ -344,7 +358,7 @@ public class RegSolEmpresa extends JDialog {
 				}
 				{
 					spnEdad = new JSpinner();
-					spnEdad.setModel(new SpinnerNumberModel(new Integer(18), new Integer(18), null, new Integer(1)));
+					spnEdad.setModel(new SpinnerNumberModel(18, 18, 118, 1));
 					spnEdad.setBounds(535, 261, 136, 20);
 					pnRequisitos.add(spnEdad);
 				}
@@ -562,6 +576,7 @@ public class RegSolEmpresa extends JDialog {
 
 							JButton btnSolicitar = new JButton(textButton);
 							btnSolicitar.addActionListener(new ActionListener() {
+								String messageEmptyFields;
 								public void actionPerformed(ActionEvent e) {
 									if(Utils.getSpinnerFloatValue(spnSalarioMin) >= Utils.getSpinnerFloatValue(spnSalarioMax)) {
 										JOptionPane.showMessageDialog(null,
@@ -575,9 +590,9 @@ public class RegSolEmpresa extends JDialog {
 												"Error",
 												JOptionPane.ERROR_MESSAGE);
 									}
-									else if(faltanDatos()) {
+									else if(!(messageEmptyFields = checkEmptyFields()).isEmpty()) {
 										JOptionPane.showMessageDialog(null,
-												"Faltan datos para registrar la solicitud.",
+												messageEmptyFields,
 												"Error",
 												JOptionPane.ERROR_MESSAGE);
 									}
@@ -796,34 +811,51 @@ public class RegSolEmpresa extends JDialog {
 		return this.getOficiosSelected().size() > 0;
 	}
 
-	private boolean faltanDatos() {
-		boolean faltan = false;
+	private String checkEmptyFields() {
+		ArrayList<String> emptyFields = new ArrayList<String>();
 
 		// No importa si elige un sexo o no
-		if(Utils.getSpinnerFloatValue(spnPorcentajeMatch) == 0.0f
-				|| Utils.getSpinnerIntValue(spnCantPlazas) == 0
-				|| Utils.isCbxDefaultValue(cbxNacionalidad) 
-				|| Utils.isCbxDefaultValue(cbxModalidadTrabajo)) {
-			faltan = true;
+		if(Utils.getSpinnerFloatValue(spnPorcentajeMatch) == 0.0f) {
+			emptyFields.add("Porcentaje de match requerido");
+		}
+		if(Utils.getSpinnerIntValue(spnCantPlazas) == 0) {
+			emptyFields.add("Cantidad de plazas necesarias");
+		}
+		if(Utils.isCbxDefaultValue(cbxNacionalidad)) {
+			emptyFields.add("Nacionalidad");
+		}
+		if(Utils.isCbxDefaultValue(cbxModalidadTrabajo)) {
+			emptyFields.add("Modalidad del trabajo");
 		}
 
 		if(rbUniversitario.isSelected()) {
-			if(Utils.isCbxDefaultValue(cbxUniversidad) || Utils.isCbxDefaultValue(cbxCarrera)) {
-				faltan = true;
+			if(Utils.isCbxDefaultValue(cbxUniversidad)) {
+				emptyFields.add("Universidad");
+			}
+			if(Utils.isCbxDefaultValue(cbxCarrera)) {
+				emptyFields.add("Carrera");
 			}
 		}
 		else if(rbTecnico.isSelected()) {
 			if(Utils.isCbxDefaultValue(cbxAreaTecnica)) {
-				faltan = true;
+				emptyFields.add("\u00c1rea t\u00e9cnica");
 			}
 		}
 		else {
 			if(!hayOficiosSeleccionados()) {
-				faltan = true;
+				emptyFields.add("Oficios");
 			}
 		}
 
-		return faltan;
+		String message = "";
+		if (emptyFields.size() > 0) {
+			message = "Los siguientes campos est\u00e1n vac\u00edos:";
+			for (String emptyField : emptyFields) {
+				message += "\n\t- " + emptyField;
+			}
+		}
+
+		return message;
 	}
 
 	private Empresa getDatosEmpresa(String RNC) {
